--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "jfreeman82/freestrouter",
+    "name": "JochenTimmermans/freestrouter",
     "description": "A PHP URL Router.",
     "type": "library",
     "authors": [
         {
-            "name": "jfreeman",
-            "email": "jfreeman@skedaddling.com"
+            "name": "Jochen Timmermans",
+            "email": "jochen@jochent.eu"
         }
     ],
     "require": {}
